// API definition for Geese service.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "xyz.breakit.geese";
option java_outer_classname = "GeeseProto";

package geese;

/*
 * Unary service to request goose positions.
 */
service GeeseService {
    /*
     * Return next line of geese positions.
     */
    rpc GetGeese (GetGeeseRequest) returns (GeeseResponse);
}

/*
 * Request to recieve next lines of geese.
 */
message GetGeeseRequest {
    /*
     * Number of requested horizontal lines.
     */
    int32 lines_count = 1;
    /*
     * Line width: max number of geese in one sceen horizontal line.
     */
    int32 line_width = 2;
}

/*
 * Contains list of horizontal lines with geese.
 */
message GeeseResponse {
    /*
     * Horizontal lines with geese, up to a requested number.
     */
    repeated GeeseLine lines = 1;
}

/*
 * Contains goose positions in a horizontal line.
 */
message GeeseLine {
    /*
     * Array of geese. Numbers in the array represent vertical positions
     * of geese. For example, [1, 3] array means there are geese in the first
     * and third column of the line.
     */
    repeated int32 geese_positions = 1;
}
